# chromasky-toolkit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
ai/: 1.md  1.prompt.md
docs/: glow-index-api.md  tiles-api.md
notebooks/: 01_data_acquisition.ipynb  01_future_data_pipeline.ipynb  01_past_data_pipeline.ipynb  02_data_processed.ipynb  02_glow_index_algorithm.ipynb  03_cams_aod_pipeline.ipynb  03_data_future.ipynb  04_data_future_visualization.ipynb  05_cams_aod_acquisition.ipynb  06_cams_aod_visualization.ipynb  07_glow_index_algorithm.ipynb  08.ipynb  09_ list_my_fonts.ipynb
src/chromasky_toolkit/: astronomy.py  config.py  data_acquisition.py  glow_index.py  image_converter.py  input_visualizer.py  main.py  map_drawer.py  mapping.py  processing.py  server.py  tile_generator.py
src/templates/: archive.html  index.html
tests/: test_midnight_download.py
tools/: setup_map_data.py
